--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="css/weather.css" rel="stylesheet" />
+    <link href="/css/weather.css" rel="stylesheet" type = "text/css" />
     <link
       href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:300"
       rel="stylesheet"
@@ -60,7 +60,7 @@
               <!-- probably have to adjust the line below -->
               <p class="adjust" id="time0">current<br />12PM</p>
               <!-- <p class="adjust" id="time0">12pm</p> -->
-              <img src="assets/fewclouds-day.svg" id="image0" alt="" />
+              <img src="/assets/fewclouds-day.svg" id="image0" alt="" />
               <div class="line"></div>
               <h1 class="adjust" id="temp0">67</h1>
             </div>
@@ -125,7 +125,7 @@
       <div class="row">
         <div class="time">
           <h3 class="temp" id="time1">1:00pm</h3>
-          <img src="assets/fewclouds-day.svg" id="image1" alt="" />
+          <img src="/assets/fewclouds-day.svg" id="image1" alt="" />
           <h1 class="new" id="temp1">67</h1>
         </div>
         <!-- <div class="vl"></div> -->
@@ -133,7 +133,7 @@
       <div class="row">
         <div class="time">
           <h3 class="temp" id="time2">1:00pm</h3>
-          <img src="assets/fewclouds-day.svg" id="image2" alt="" />
+          <img src="/assets/fewclouds-day.svg" id="image2" alt="" />
           <h1 id="temp2">67</h1>
         </div>
         <div class="vl"></div>
@@ -142,7 +142,7 @@
       <div class="row">
         <div class="time">
           <h3 class="temp" id="time3">1:00pm</h3>
-          <img src="assets/fewclouds-day.svg" id="image3" alt="" />
+          <img src="/assets/fewclouds-day.svg" id="image3" alt="" />
           <h1 id="temp3">67</h1>
         </div>
         <div class="vl"></div>
@@ -151,7 +151,7 @@
       <div class="row">
         <div class="time">
           <h3 class="temp" id="time4">1:00pm</h3>
-          <img src="assets/fewclouds-day.svg" id="image4" alt="" />
+          <img src="/assets/fewclouds-day.svg" id="image4" alt="" />
           <h1 id="temp4">67</h1>
         </div>
         <div class="vl"></div>
@@ -160,13 +160,13 @@
       <div class="row">
         <div class="time">
           <h3 class="temp" id="time5">1:00pm</h3>
-          <img src="assets/fewclouds-day.svg" id="image5" alt="" />
+          <img src="/assets/fewclouds-day.svg" id="image5" alt="" />
           <h1 id="temp5">67</h1>
         </div>
         <div class="vl"></div>
       </div>
     </div>
 
-    <script src="js/weather.js"></script>
+    <script src="/js/weather.js"></script>
   </body>
 </html>
